--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -134,7 +134,7 @@
                             place_holder_text="stories.word-index" 
                             height="201" 
                             change.delegate="handle_words_change($event)" 
-                            settings.bind="words_settings"
+                            settings.bind="words_settings">
                         </multi-select>
                     </div>
                     <div class="row" style="margin-top: 20px;" if.bind="user.editing">
