--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -4,7 +4,7 @@
     <div class="input-group search-filter" if.bind="options.length > 10">
         <search-input value.bind="filter" placeholder.bind="place_holder_text" height="32"></search-input>
     </div>
-    <div class="ms-container" css="height:${height}px;position:relative">
+    <div class="ms-container" css="height:${filter || ! settings.show_only_if_filter ? height : 0}px;position:relative">
         <button if.bind="can_add" 
             style="position:absolute;top:60px;left:140px;padding:0;"
             click_trigger="add_item()" 
@@ -66,7 +66,7 @@
         </div>
         <!-- Under the line come all unselected options -->
         <div class="row options unselected" 
-            css="max-height:${height_unselected}px;" 
+            css="max-height:${filter || ! settings.show_only_if_filter ? height_unselected : 0}px;" 
             if.bind="options && options.length > 0 && (filter.length > 0 || ! settings.show_only_if_filter)">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : all_selected : 'exclude' | take : 199">
