--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -97,16 +97,15 @@
                     </div>
                 </div>
                 <div class="col-md-6 fr-view style="margin-bottom:16px;padding-left:20px;" 
-                        if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing"
-                    )>
-                    <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
-                        ${'members.life-summary' | t} ${member.member_info.first_name}
-                    </h4>
-                    <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
-                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
-                        ${story_0.name}
-                    </h3>
+                        if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
+                        <h4 innherhtml.bind="story_0.topic" style="margin-top:16px;margin-bottom:0px;color:gray;">
+                            ${'members.life-summary' | t} ${member.member_info.first_name}
+                        </h4>
+                        <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
+                            <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
+                            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
+                            ${story_0.name}
+                        </h3>
                     <div class="member-story-panel" style="border-left:solid 2px darkgray;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_0.story_text ">
                         </p>
@@ -119,48 +118,56 @@
                 <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
                 <div class="col-md-3 story-box last notfirst" show.bind="story_4.story_text != ''">
-                    <h4 show.bind="story_4.name" dir="rtl">
-                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
-                        <span innerhtml.bind="story_4.name"></span>
-                        <a click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
-                    </h4>
+                    <div show.bind="story_4.name">
+                        <a class="goto-story-page" click.trigger="goto_story_page(story_4)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
+                        <h4 dir="rtl">
+                            <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
+                            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>
+                            <span class="name" innerhtml.bind="story_4.name"></span>
+                        </h4>
+                    </div>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3 story-box notfirst" show.bind="story_3.story_text != ''">
-                    <h4 show.bind="story_3.name" dir="rtl">
-                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
-                        <span innerhtml.bind="story_3.name"></span>
-                        <a click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
-                    </h4>
+                    <div show.bind="story_3.name" >
+                        <a class="goto-story-page" click.trigger="goto_story_page(story_3)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
+                        <h4 dir="rtl">
+                            <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
+                            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>
+                            <span class="name" innerhtml.bind="story_3.name"></span>
+                        </h4>
+                    </div>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3 story-box notfirst" show.bind="story_2.story_text != ''" >
-                    <h4 show.bind="story_2.name" dir="rtl" >
-                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
-                        <span innerhtml.bind="story_2.name"></span>
-                        <a click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
-                    </h4>
+                    <div show.bind="story_2.name" >
+                        <a class="goto-story-page" click.trigger="goto_story_page(story_2)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
+                        <h4 dir="rtl" >
+                            <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
+                            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>
+                            <span class="name" innerhtml.bind="story_2.name"></span>
+                        </h4>
+                    </div>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_text ">
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3 story-box" show.bind="story_1.story_text != '' || user.privileges.EDITOR">
-                    <h4 show.bind="story_1.name" dir="rtl">
-                        <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
-                        <span innerhtml.bind="story_1.name"></span>
-                        <a click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
-                    </h4>
+                    <div show.bind="story_1.name" >
+                        <a class="goto-story-page" click.trigger="goto_story_page(story_1)" t="[title]members.to-story-page"><i class="fa fa-play fa-rotate-180"></i></a>
+                        <h4 dir="rtl">
+                            <i class="fa fa-expand fa-xs is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
+                            <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>
+                            <span class="name" innerhtml.bind="story_1.name"></span>
+                        </h4>
+                    </div>
                     <div class="member-story-panel">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_text">
                         </p>
