--- a/src/members/members.html
+++ b/src/members/members.html
@@ -51,7 +51,7 @@
                     <li repeat.for="member of members | filter : filter : '*selected' : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : 3200 | filtervisibility : 0 "
                         class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''} ${member.selected}"
                         dir="rtl">
-                        <a click.trigger="member_clicked(member, $event)" disabled.bind="not_ready(member)" style="color:black;">
+                        <a click.trigger="member_clicked(member, $event)" disabled.bind="not_ready(member)" style="color:black;cursor:pointer;">
                             <img src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.title" 
                                 css="border: ${member.selected ? '6px solid lightgreen' : 'none'}" />
                             <h6 dir="rtl" class="list-group-item-heading" >${member.name}</h6>
