story source separated from creator/updater. some style issues.

--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -19,7 +19,7 @@
                 style.bind="face_location(face)" 
                 aubs-tooltip="text.bind:face.name">
                 <span style="position:relative">
-                    <span class="highlighted" if.bind="highlighting" innerhtml.bind="face.name" 
+                    <span class="highlighted-face" if.bind="highlighting" innerhtml.bind="face.name" 
                         css="background-color:white;color:black;opacity:1.0;position:absolute;top:${face.r}px;left:${-face.r}px;width:${2*face.r}px;font-size:70%;"
                     </span>
                 </span>
