--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -10,6 +10,9 @@
                     <div class="form-group" style="margin:0;">
                         <input type="text" class="form-control" t="[placeholder]stories.enter-story-name" value.bind="story.name" dir="rtl">
                     </div>
+                    <div class="form-group" style="margin:0;">
+                        <input type="text" class="form-control" t="[placeholder]stories.enter-story-source" value.bind="story.source" dir="rtl">
+                    </div>
                 </form>
             </div>
         </ux-dialog-header>
