--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -9,7 +9,7 @@
             <h3 dir="rtl" style="float: right;margin:0px;">
                 ${story.name}<span if.bind="user.privileges.DEVELOPER">&nbsp;${story.id}</span>
             </h3>
-            <button if.bind="keywords && keywords.length > 0 && ! user.editing" 
+            <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing" 
                 class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
             </button>
             <copy-to-clipboard if.bind="user.editing" content.bind="story_url" prefix.bind="host" style="float:left;"></copy-to-clipboard>
