headers of selected stories

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -32,7 +32,7 @@
             <ul style="overflow:auto;direction:rtl;" class="panel-story-segments" css="height:${panel_height-30}px;">
                 <li repeat.for="story of stories_sample" dir="rtl">
                     <div style="margin-top:12px;max-height:100px;min-height:100px;padding-bottom:30px;border-bottom:solid 2px lightgray;position:relative;" >
-                        <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;" click.delegate="jump_to_the_full_story(story)">
+                        <h4 dir="rtl" style="float:right;margin:0;padding:0;cursor:pointer;font-weight:bold;" click.delegate="jump_to_the_full_story(story)">
                             ${story.name}
                         </h4>
                         <div class="story-prefix">
