--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -5,7 +5,8 @@
             <img src="${slide.src}" height="${slide.height}" width="${slide.width}" />
             <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help"></help>
             <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
-            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter" click.trigger="toggle_highlighting($event)">
+            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter" id="side-tool highlighter" 
+                click.trigger="toggle_highlighting($event)">
                 <i class="fa fa-lg fa-circle${highlighting ? '' :'-o'}"></i>
             </button>
             <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story" click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
